--- a/style.css
+++ b/style.css
@@ -127,27 +127,27 @@ input::placeholder {
     font-size: 20px;
   }
   footer .copyright-text {
-    /* font-size: 15px; */
+    font-size: 15px;
   }
   footer ul li {
     line-height: 20px;
   }
   footer ul li a {
-    /* font-size: 15px; */
+    font-size: 15px;
   }
   footer .footer-title {
-    /* font-size: 17px; */
+    font-size: 17px;
   }
   .btn-primary {
-    /* font-size: 15px; */
+    font-size: 15px;
     letter-spacing: 1px;
   }
   footer .footer-newsletter {
-    /* font-size: 18px; */
+    font-size: 18px;
     
   }
   input::placeholder {
-    /* font-size: 15px; */
+    font-size: 15px;
   }
   footer hr {
     border-top: 1px solid rgb(47, 46, 46) !important;
